syntax = "proto3";

package adc.learning.v1;

import "learning/block.proto";
import "google/protobuf/timestamp.proto";

// ============================================================================
// Common Types
// ============================================================================

message Image {
  string url = 1;
  optional int32 width = 2;
  optional int32 height = 3;
  optional string alt = 4;
}

// ============================================================================
// Learning Path
// ============================================================================

enum PathItemType {
  PATH_ITEM_TYPE_UNSPECIFIED = 0;
  PATH_ITEM_TYPE_ARTICLE = 1;
  PATH_ITEM_TYPE_PATH = 2;
}

enum PathItemLevel {
  PATH_ITEM_LEVEL_UNSPECIFIED = 0;
  PATH_ITEM_LEVEL_CRITICO = 1;
  PATH_ITEM_LEVEL_IMPORTANTE = 2;
  PATH_ITEM_LEVEL_OPCIONAL = 3;
}

message PathItem {
  string slug = 1;
  PathItemType type = 2;
  PathItemLevel level = 3;
}

message LearningPath {
  string slug = 1;
  string title = 2;
  string description = 3;
  string color = 4;
  optional Image banner = 5;
  bool public = 6;
  bool listed = 7;
  repeated PathItem items = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// ============================================================================
// Article
// ============================================================================

message Article {
  string slug = 1;
  string title = 2;
  optional string path_slug = 3;
  repeated Block blocks = 4;
  optional string video_url = 5;
  optional Image image = 6;
  string author_id = 7;
  bool listed = 8;
  optional string description = 9;
  optional string path_color = 10;  // Populated from related path
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// ============================================================================
// Request/Response Messages - Paths
// ============================================================================

message ListPathsRequest {
  optional bool public = 1;
  optional bool listed = 2;
  optional int32 limit = 3;
  optional int32 skip = 4;
}

message ListPathsResponse {
  repeated LearningPath paths = 1;
}

message GetPathRequest {
  string slug = 1;
}

message GetPathResponse {
  optional LearningPath path = 1;
}

message CreatePathRequest {
  string slug = 1;
  string title = 2;
  string description = 3;
  string color = 4;
  optional Image banner = 5;
  optional bool public = 6;
  optional bool listed = 7;
  repeated PathItem items = 8;
}

message CreatePathResponse {
  LearningPath path = 1;
}

message UpdatePathRequest {
  string slug = 1;
  optional string title = 2;
  optional string description = 3;
  optional string color = 4;
  optional Image banner = 5;
  optional bool public = 6;
  optional bool listed = 7;
  repeated PathItem items = 8;
}

message UpdatePathResponse {
  LearningPath path = 1;
}

message DeletePathRequest {
  string slug = 1;
}

message DeletePathResponse {
  bool success = 1;
}

// ============================================================================
// Request/Response Messages - Articles
// ============================================================================

message ListArticlesRequest {
  optional bool listed = 1;
  optional string path_slug = 2;
  optional string q = 3;
  optional int32 limit = 4;
  optional int32 skip = 5;
}

message ListArticlesResponse {
  repeated Article articles = 1;
}

message GetArticleRequest {
  string slug = 1;
}

message GetArticleResponse {
  optional Article article = 1;
}

message CreateArticleRequest {
  string slug = 1;
  string title = 2;
  optional string path_slug = 3;
  repeated Block blocks = 4;
  optional string video_url = 5;
  optional Image image = 6;
  string author_id = 7;
  optional bool listed = 8;
  optional string description = 9;
}

message CreateArticleResponse {
  Article article = 1;
}

message UpdateArticleRequest {
  string slug = 1;
  optional string title = 2;
  optional string path_slug = 3;
  repeated Block blocks = 4;
  optional string video_url = 5;
  optional Image image = 6;
  optional bool listed = 7;
  optional string description = 8;
}

message UpdateArticleResponse {
  Article article = 1;
}

message DeleteArticleRequest {
  string slug = 1;
}

message DeleteArticleResponse {
  bool success = 1;
}

// ============================================================================
// Service Definition
// ============================================================================

service LearningService {
  // Paths
  rpc ListPaths(ListPathsRequest) returns (ListPathsResponse);
  rpc GetPath(GetPathRequest) returns (GetPathResponse);
  rpc CreatePath(CreatePathRequest) returns (CreatePathResponse);
  rpc UpdatePath(UpdatePathRequest) returns (UpdatePathResponse);
  rpc DeletePath(DeletePathRequest) returns (DeletePathResponse);

  // Articles
  rpc ListArticles(ListArticlesRequest) returns (ListArticlesResponse);
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse);
  rpc UpdateArticle(UpdateArticleRequest) returns (UpdateArticleResponse);
  rpc DeleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse);
}
